--- a/index.html
+++ b/index.html
@@ -44,6 +44,80 @@
         </nav>
     </header>
 
+
+    <section class="s1">
+        <div class="container">
+            <div class="row">
+                <img class="col-12" src="./img/profile.png" alt="">
+            </div>
+
+            <div class="row">
+                <h1 class="col-12">BOOTSTRAP AND SASS</h1>
+            </div>
+
+            <div class="row">
+                <h2>-----★-----</h2>
+            </div>
+
+            <div class="row">
+                <h4 class="col-12">Web Developer - Graphic Artist - User Expiriance Designer</h4>
+            </div>
+        </div>
+    </section>
+
+    <section class="s2">
+        <div class="container">
+            <div class="row">
+                <h1 class="col-12">PORTFOLIO</h1>
+            </div>
+
+            <div class="row">
+                <h2>-----★-----</h2>
+            </div>
+
+            <div class="row">
+                <div class="offset-2 col-8">
+                    <img src="./img/cabin.png" alt="">
+                    <img src="./img/cake.png" alt="">
+                    <img src="./img/circus.png" alt="">
+                </div>
+            </div>
+
+            <div class="row last-row">
+                <div class="offset-2 col-8">
+                    <img src="./img/game.png" alt="">
+                    <img src="./img/safe.png" alt="">
+                    <img src="./img/submarine.png" alt="">
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="s3">
+        <div class="container">
+            <div class="row">
+                <h1 class="col-12">PORTFOLIO</h1>
+            </div>
+
+            <div class="row">
+                <h2>-----★-----</h2>
+            </div>
+
+            <div class="row">
+                <p class="offset-2 col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto maiores
+                    ducimus nulla, nostrum, accusantium dolorum culpa ullam quas animi esse rerum deserunt incidunt
+                    velit voluptatem cum natus cumque aliquid?</p>
+                <p class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto maiores
+                    ducimus nulla, nostrum, accusantium dolorum culpa ullam quas animi esse rerum deserunt incidunt
+                    velit voluptatem cum natus cumque aliquid?</p>
+            </div>
+
+
+
+        </div>
+    </section>
+
 </body>
 
 </html>
