--- a/index.html
+++ b/index.html
@@ -107,16 +107,76 @@
             <div class="row">
                 <p class="offset-2 col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto maiores
                     ducimus nulla, nostrum, accusantium dolorum culpa ullam quas animi esse rerum deserunt incidunt
-                    velit voluptatem cum natus cumque aliquid?</p>
+                    velit voluptatem cum natus cumque aliquid? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Repudiandae ad quod similique eveniet. Sequi optio quis vero at est nihil itaque voluptas,
+                    reprehenderit corporis ea commodi repudiandae qui facere tempore?</p>
                 <p class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto maiores
                     ducimus nulla, nostrum, accusantium dolorum culpa ullam quas animi esse rerum deserunt incidunt
-                    velit voluptatem cum natus cumque aliquid?</p>
+                    velit voluptatem cum natus cumque aliquid?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Maxime ipsam quis ducimus labore similique laborum quod consequatur tenetur cum. Accusantium
+                    necessitatibus maiores quae quod at, doloribus voluptatibus distinctio cumque maxime!</p>
             </div>
 
+            <div class="row">
+                <button class="col-12"><img src="./img/information.png" width="16px"> Find Out More</button>
+            </div>
+        </div>
+    </section>
 
+    <section class="s4">
+        <div class="container">
+            <div class="row">
+                <h1 class="col-12">CONTACT ME</h1>
+            </div>
+
+            <div class="row">
+                <h2>-----★-----</h2>
+            </div>
+
+            <form action="" class="offset-2 col-8">
+                <label for="name">Name</label> <br>
+                <input type="text" id="name"> <br>
+                <label for="email">Email Adress</label> <br>
+                <input type="email" id="email"> <br>
+                <label for="num">Phone Number</label> <br>
+                <input type="text" id="num"> <br>
+                <label for="mess">Message</label> <br>
+                <textarea name="msg" id="mess" cols="60" rows="5"></textarea>
+                <input class="subm" type="submit">
+            </form>
 
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <h2>LOCATION</h2>
+                    <p>Centar za obrazovanje <br> BIT TECHNOLOGY <br> Nemanjina 5/1,Beograd</p>
+                </div>
+
+                <div class="col-4">
+                    <h2>AROUND THE WEB</h2>
+                    <p>Centar za obrazovanje <br> BIT TECHNOLOGY <br> Nemanjina 5/1,Beograd</p>
+                </div>
+
+                <div class="col-4">
+                    <h2>MORE DETAILS</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates magni amet, corporis nemo
+                        cupiditate ea tempora, unde deleniti tenetur aut, illo cum veniam animi ab? Ullam accusantium
+                        earum deleniti quo?</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <p class="col-12 cr">Copyright © Thin Mellody Studios </p>
+            </div>
+            <div class="row">
+                <p class="col-12 cr2">Bog Butstrapa Igor Dulovic </p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
